# wasm4_snake

./: CNAME  Cargo.toml  index.html
src/: lib.rs  snake.rs  utils.rs
