[package]
name = "cart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
rand = { version = "0.8.4", default_features = false }
rand_pcg = "0.3.1"

[profile.release]
opt-level = "z"
lto = true
